Split out server and camera into separate files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,6 @@ cmake_minimum_required(VERSION 3.12)
 project(main)
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(main main.cpp)
-
 find_package(OpenCV REQUIRED)
 
 include(cmake/MyBoost.cmake)
@@ -17,14 +15,8 @@ include_directories(
     ${CMAKE_CURRENT_SOURCE_DIR}/thirdParty
 )
 
-target_link_libraries(main 
-    PRIVATE 
-    
-    ${OpenCV_LIBS}
-    video_stream
-    server_lib
-)
-
-add_subdirectory(src)
 add_subdirectory(data_forwarder)
 add_subdirectory(data_handler)
+add_subdirectory(src)
+
+add_subdirectory(app)
