--- a/src/image_processing/CMakeLists.txt
+++ b/src/image_processing/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_library(image_processing_lib
     
-    image_processing.cpp
+    tracking_base.cpp
+    tracking_implementations/image_processing.cpp
 )
 
 target_include_directories(
@@ -8,6 +9,7 @@ target_include_directories(
         PUBLIC
 
     ${CMAKE_CURRENT_SOURCE_DIR}/
+    ${CMAKE_CURRENT_SOURCE_DIR}/tracking_implementations
 )
 
 target_link_libraries(image_processing_lib
